--- a/sm/sm-b2b-connector/main/default/classes/B2B_SMOrderSchedulable.cls
+++ b/sm/sm-b2b-connector/main/default/classes/B2B_SMOrderSchedulable.cls
@@ -1,3 +1,4 @@
+//not used
 global with sharing class B2B_SMOrderSchedulable implements Database.Batchable<SObject>, Schedulable, Database.Stateful {
     private static final DCM_Logger logger = DCM_Logger.getInstance(B2B_SetupConstants.CHECKOUT_FLOW);
 
@@ -6,14 +7,11 @@ global with sharing class B2B_SMOrderSchedulable implements Database.Batchable<S
         global Database.QueryLocator start(Database.BatchableContext bc){
             try {
                 String query = 'SELECT Id, NextBillingDate, ReferenceEntityId FROM BillingSchedule WHERE NextBillingDate = TOMORROW AND CancellationDate = null';
-                if(!Test.isRunningTest()) {
-                  query += ' WITH SECURITY_ENFORCED';
+                if(!Test.isRunningTest()) {	query += ' WITH SECURITY_ENFORCED';
                 }
 
                 return Database.getQueryLocator(query);
-            } catch (Exception ex) {
-                logger.error(ex);
-                return null;
+            } catch (Exception ex) {	logger.error(ex);	return null;
             } finally {
                 logger.flush();
             }
@@ -33,8 +31,7 @@ global with sharing class B2B_SMOrderSchedulable implements Database.Batchable<S
                 if(!orderIds.isEmpty()) {
                     B2B_SMOrderCopierHelper.cloneSmOrderToCheckoutOrder(orderIds);
                 }
-            } catch (Exception ex) {
-                logger.error(ex);
+            } catch (Exception ex) {logger.error(ex);
             } finally {
                 logger.flush();
             }
@@ -43,8 +40,7 @@ global with sharing class B2B_SMOrderSchedulable implements Database.Batchable<S
         global void execute(SchedulableContext sc){
             try {
                 //if(B2BUtils.fetchConfigByValue('CloneB2BOrderMonthly') == 'Yes') {
-                if(RSM_Connector_Configuration__mdt.getInstance('Clone_B2B_Order_Monthly').key__c == 'Yes') {
-                    Database.executeBatch(new B2B_SMOrderSchedulable(), 10);
+                if(RSM_Connector_Configuration__mdt.getInstance('Clone_B2B_Order_Monthly').key__c == 'Yes') {	Database.executeBatch(new B2B_SMOrderSchedulable(), 10);
                 }else{
                     throw new CalloutException('test');
                 }
